--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "gsap": "^3.13.0",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,6 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^6.3.5"
   }
 }
