adding user auth with nodejs + conditional rendering for pages

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-REACT_APP_API_URL="http://localhost:8000/predict"
+# afstapi ai variables
+VITE_REACT_APP_API_URL=http://localhost:8000/predict
+VITE_GEMINI_CHAT_BOT=http://localhost:8000/chat
+
+# nodes auth variables
+VITE_AUTH_USER_SIGN_UP=http://localhost:3000/auth/signup
+VITE_AUTH_USER_LOG_IN=http://localhost:3000/auth/login
