change load bar + update password functionality + account delete functionality + add account setting page

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,18 @@
-# afstapi ai variables
+# FASTAPI AI/ML(IMAGE CLASSIFY) URL
 VITE_REACT_APP_API_URL=http://localhost:8000/predict
 VITE_GEMINI_CHAT_BOT=http://localhost:8000/chat
 
-# nodes auth variables
+# NODE AUTH URL
 VITE_AUTH_USER_SIGN_UP=http://localhost:3000/auth/signup
 VITE_AUTH_USER_LOG_IN=http://localhost:3000/auth/login
+
+# NODE USER URL
+VITE_USER_PROFILE=http://localhost:3000/user/profile
+VITE_USER_PROFILE_PASSWORD=http:/localhost:3000/user/profile/password
+VITE_USER_PROFILE_DELETE=http://localhost:3000/user/profile/delete
+
+# NODE HISTORY URL
+VITE_SAVE_USER_HISTORY_URL=http://localhost:3000/history
+VITE_GET_USER_HISTORY_URL=http://localhost:3000/history
+VITE_CLEAR_ALL_HISTORY_URL=http://localhost:3000/history
+VITE_CLEAR_ONE_HISTORY_ENTRY_URL=http://localhost:3000/history
